# Django-API-Utils

./: .gitignore  README.md  pyproject.toml
docs/: CNAME  README.md  _coverpage.md  _navbar.md  _sidebar.md  index.html  log.md
docs/zh/: log.md
docs/zh/moudles/: auth.md  exception.md  route.md  view.md
src/it_drf_utils/: mapping.py  response.py  response_status.py  router_builder.py
utils/: api_view.py  auth.py  csrfExemptAuth.py  exception.py  response.py  response_status.py  router_builder.py  serializers.py
